# irods_rule_engine_plugins_policy

./: CMakeLists.txt  README.md  access_time.cmake  data_replication.cmake  data_retention.cmake  data_verification.cmake  data_verification_utilities.cpp  data_verification_utilities.hpp  event_generator_object_metadata.cmake  event_generator_resource_metadata.cmake  event_handler_collection_modified.cmake  event_handler_data_object_modified.cmake  event_handler_group_modified.cmake  event_handler_metadata_modified.cmake  event_handler_resource_modified.cmake  event_handler_user_modified.cmake  event_handler_zone_modified.cmake  example_data_retention_invocation.r  filesystem_usage.cmake  general_administration_handler.hpp  irods_consortium_continuous_integration_build_hook.py  irods_consortium_continuous_integration_test_hook.py  libirods_rule_engine_plugin-event_handler-collection_modified.cpp  libirods_rule_engine_plugin-event_handler-data_object_modified.cpp  libirods_rule_engine_plugin-event_handler-group_modified.cpp  libirods_rule_engine_plugin-event_handler-metadata_modified.cpp  libirods_rule_engine_plugin-event_handler-resource_modified.cpp  libirods_rule_engine_plugin-event_handler-user_modified.cpp  libirods_rule_engine_plugin-event_handler-zone_modified.cpp  libirods_rule_engine_plugin-policy_engine-data_replication.cpp  libirods_rule_engine_plugin-policy_engine-data_retention.cpp  libirods_rule_engine_plugin-policy_engine-data_verification.cpp  libirods_rule_engine_plugin-policy_engine-filesystem_usage.cpp  libirods_rule_engine_plugin-policy_engine-log_context.cpp  libirods_rule_engine_plugin-policy_engine-query_processor.cpp  libirods_rule_engine_plugin-policy_engine-testing_policy.cpp  libirods_rule_engine_plugin-policy_engine-verify_checksum.cpp  log_context.cmake  parameter_substitution.hpp  query_processor.cmake  (+2 more)
framework/: CMakeLists.txt  irods_dev_policy_composition_framework.cmake  policy_engine_schema.json
framework/example/: libirods_rule_engine_plugin-policy_engine_example.cpp  policy_engine_example.cmake
framework/include/irods/: policy_composition_framework_configuration_manager.hpp  policy_composition_framework_event_handler.hpp  policy_composition_framework_keywords.hpp  policy_composition_framework_parameter_capture.hpp  policy_composition_framework_plugin_configuration_json.hpp  policy_composition_framework_policy_engine.hpp  policy_composition_framework_utilities.hpp
framework/src/: policy_composition_framework_utilities.cpp
packaging/: postinst  test_plugin_policy_engine-query_processor.py  test_plugins_policy.py
